src/App.module.css
.historyCard {
  padding: 1rem;
  gap: 0.5rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: 1px solid #ccc;
  border-radius: 0.5rem;
}

.mainContainer {
  display: flex;
  flex-direction: column;
  padding: 1rem;
}

